syntax = "proto3";

import "google/protobuf/any.proto"; 

package axbolt.saga;
option go_package = "saga";

// SagaInstance is a container for a saga instance serialized into the
// protobuf format before being persisted in a Bolt bucket
message SagaInstance {
    string instance_id = 1;
    int64  revision = 2;
    string persistence_key = 3;
    google.protobuf.Any data = 4;
    string insert_time = 5;
    string update_time = 6; 
} 
